syntax = "proto3";

option csharp_namespace = "BakeryOrderManagementSystem.Grpc";

service BakeryService {
    rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
    rpc GetProduct(GetProductRequest) returns (ProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (Empty);
    rpc GetAllProducts(Empty) returns (ProductListResponse);
    
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc GetOrder(GetOrderRequest) returns (OrderResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
    rpc DeleteOrder(DeleteOrderRequest) returns (Empty);
    rpc GetAllOrders(Empty) returns (OrderListResponse);
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
}

message UpdateProductRequest {
    int32 product_id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
}

message DeleteProductRequest {
    int32 product_id = 1;
}

message GetProductRequest {
    int32 product_id = 1;
}

message GetAllProductsRequest {}

message ProductResponse {
    int32 product_id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
}

message ProductListResponse {
    repeated ProductResponse products = 1;
}

message CreateOrderRequest {
    int32 customer_id = 1;
    OrderStatus status = 2;
    repeated OrderProductRequest order_products = 3;
}

message UpdateOrderStatusRequest {
    int32 order_id = 1;
    OrderStatus status = 2;
}

message DeleteOrderRequest {
    int32 order_id = 1;
}

message GetOrderRequest {
    int32 order_id = 1;
}

message GetAllOrdersRequest {}

message OrderResponse {
    int32 order_id = 1;
    int32 customer_id = 2;
    string order_date = 3;
    OrderStatus status = 4;
    repeated OrderProductResponse order_products = 5;
}

message OrderListResponse {
    repeated OrderResponse orders = 1;
}

message OrderProductRequest {
    int32 product_id = 1;
    int32 quantity = 2;
}

message OrderProductResponse {
    int32 product_id = 1;
    int32 quantity = 2;
}

enum OrderStatus {
    PENDING = 0;
    PROCESSING = 1;
    COMPLETED = 2;
    CANCELLED = 3;
}

message Empty {}
